fix: align

--- a/src/components/z-app-header/styles.css
+++ b/src/components/z-app-header/styles.css
@@ -286,7 +286,7 @@ z-offcanvas[open] .drawer-content ::slotted(z-menu) {
 
 /* Tablet breakpoint */
 @media (min-width: 768px) {
-  :host([enable-search]:not([search-page-url])) .heading-title {
+  :host([enable-search]:not([search-page-url])) .heading-container .heading-title {
     flex-wrap: nowrap;
   }
 
